clusters/aisa/kubevirt/resources/cdi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
  name: cdi-uploadproxy
  namespace: cdi
spec:
  rules:
    - host: cdi-uploadproxy.sinoa.jp
      http:
        paths:
          - backend:
              service:
                name: cdi-uploadproxy
                port:
                  number: 8443
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - cdi-uploadproxy.sinoa.jp
      secretName: letsencrypt-cdi-cert
